[project]
name = "riskanalytics-of-traffic-accident"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdal==3.12.3",
    "geopandas>=1.1.4",
    "japanize-matplotlib>=1.1.3",
    "jupyterlab>=4.6.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "seaborn>=0.13.2",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pre-commit-uv>=4.2.2",
]
